# projx

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  bunfig.toml  eslint.config.js  justfile  package.json  vitest.config.ts
.beads/: issues.jsonl  metadata.json  mod.database.just
.claude/agents/: plugin-summarizer.md
.claude/commands/: plugin-summaries.md  release.md
.claude/plans/: phase0-1-completion.md
.claude/plans/penpot-mcp/: README.md  bug-001-penpot-plugin-api-calls-hang.md  bug-002-websocket-connection-drops.md  bug-003-rest-api-transit-format-default.md  constraint-001-per-file-browser-connection.md  constraint-002-rest-api-cannot-create-pages.md  constraint-003-access-tokens-feature-flag.md  constraint-004-two-mcp-servers-different-purposes.md  penpot-vs-ascii.md
.claude/plans/unified-beads-webui/: FUTURE-ENHANCEMENTS.md  glossary.md  index.md
.claude/rules/: beads-issues.md
.claude/skills/sketch-dev/: REFINEMENT-PLAN.md  SKILL.md
.claude/skills/sketch-dev/scripts/plugins/: README.md  helpers.py  migrate_schema.py  pyproject.toml  scrape.just
.claude/skills/sketch-dev/scripts/plugins/lib/: __init__.py  differ.py  plugin.schema.json  reviewer.py  schema.py  state.py
.docker/: .env.example  compose.yaml
.github/workflows/: ci.yml  release-sign.yml  release.yml
docs/src/adrs/: 0008-use-vitest-with-testing-library-for-component-testing.md  index.md  (+9 more)
e2e/: a11y.spec.ts  keyboard.spec.ts  smoke.spec.ts
e2e/fixtures/: test-fixtures.ts
scripts/: penpot-setup.sh
src/lib/cli/: index.ts  (+3 more)
src/tests/: setup.ts
tests/routes/: layout.test.ts
(+155 files in other folders)
